--- a/style.css
+++ b/style.css
@@ -124,6 +124,13 @@ button{
     height: 80px;
     font-size: 16px;
 }
+.sec3 button a{
+    color: #bfc500;
+    text-decoration: none;
+}
+.sec3 button a:hover{
+    color: white;
+}
 
 .sec4{
     display: flex;
@@ -300,4 +307,215 @@ span{
     .sec6 img {
         width: 18%;
     }
+}
+
+
+
+/* // Screen Size 1400px check */
+@media (max-width: 1660px) {
+
+
+}
+
+/* // Screen Size 1200px check */
+@media (max-width: 1399px) {
+   
+}
+
+/* // Screen Size 992px check */
+@media (max-width: 1199px) {
+    .rt-col img{
+        width: 39%;
+    }
+    .sec2 .right{
+        width: 40%;
+    }
+    .sec2 .right p{
+        padding-top: 45px;
+        padding-right: 35px;
+    }
+    .sec10 h2{
+        line-height: 110px;
+    }
+    .sec10 p{
+        padding-top: 21px;
+        line-height: 26px;
+    }
+    .items3 img{
+        margin-top: 40px;
+        width: 308px;
+        height: 440px;
+    }
+
+
+}
+
+/* // Screen Size 768px check */
+@media (max-width: 991px) {
+    body{      
+    margin-left: 50px;
+    margin-right: 50px;
+    }
+    nav ul li a{
+        font-size: 11px;
+    }
+    .sec1.left-col h1{
+        font-size: 25px;
+    }
+    .sec1.left-col{
+        padding-right: 39px;
+    }
+    .sec1.rt-col{
+        width: 43%;
+    }
+    .sec2 .left {
+        width: 51%;
+        padding-right: 90px;
+    }
+    .sec2 .right p{
+        padding-top: 55px;
+        font-size: 10px;
+        padding-right: 5px;
+    }
+    .sec3{
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+    .sec3 h1{
+        font-size: 16px;
+        font-weight: 800;
+    }
+    .sec4 .left {
+        width: 50%;
+        padding-right: 80px;
+    }
+    .sec4 .right {
+        width: 78%;
+        padding-top: 65px;
+        padding-right: 30px;
+    }
+    .sec7{
+        padding-bottom: 45px;
+    }
+    .sec7 .p3 {
+        width: 11%;
+    }
+    .sec8 .left {
+        width: 44%;
+    }
+    .sec8 .right {
+        width: 40%;
+    }
+    .sec9 p{
+        font-size: 13px;
+    }
+    .sec10 h2 {
+        line-height: 144px;
+    }
+    .sec10 .items2 {
+        width: 35%;
+    }
+    .sec10 p {
+        padding-top: 21px;
+        line-height: 21px;
+    }
+
+}
+
+/* // Screen Size 576px check */
+@media (max-width: 767px) {
+    .logo img {
+        width: 150px;
+    }
+    header{
+        display: flex;
+    }
+    nav ul li{
+        padding-top: 15px;
+    }
+
+    nav ul li a {
+        font-size: 10px;
+    }
+    .sec1.left-col h1{
+        font-size: 17px;
+    }
+    .sec1.left-col p{
+        font-size: 11px;
+    }
+    .sec1.rt-col img {
+        width: 36%;
+    }
+    .sec3 h1 {
+        font-size: 14px;
+        font-weight: 800;
+        padding-top: 10px;
+    }
+    .sec3 p{
+        width: 42%;
+        font-size: 10px;
+    }
+    button {
+        float: right;
+        background-color: black;
+        color: #bfc500;
+        border-radius: 10px;
+        border-style: none;
+        width: 112px;
+        height: 60px;
+        font-size: 10px;
+        margin-top: -63px;
+    }
+    .sec5 h2 {
+        padding-bottom: 20px;
+        font-size: 29px;
+    }
+    .sec5 p {
+        padding-bottom: 20px;
+        word-spacing: 2px;
+    }
+    .sec6 img {
+        width: 18%;
+    }
+    .sec8 .left h2 {
+        font-size: 26px;
+    }
+    .sec8 .left {
+        width: 100% !important;
+        padding: 0px !important;
+    }
+    .sec8 .left p {
+        word-spacing: 4px;
+        line-height: 20px;
+    }
+    .sec8 .right {
+        width: 50%;
+        padding-left: 160px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .sec10 .items2 {
+        width: 90%;
+        margin-left: 20px;
+        margin-top: -215%;
+    }
+    .items3 img {
+        margin-top: 40px;
+        width: 330px;
+        height: 350px;
+        margin-left: 58px;
+    }
+    .sec10 p {
+        padding-top: 21px;
+        line-height: 42px;
+    }
+    .sec10 h2 {
+        line-height: 143px;
+        padding-bottom: 0px;
+    }
+}
+
+/* // Screen Size All mobile check */
+@media (max-width: 575px) {
+
 }
