--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ nav ul li a:hover{
 
 .sec3 h1{
     font-size: 20px;
+    font-weight: 800;
 }
 button{
     background-color: black;
@@ -517,5 +518,131 @@ span{
 
 /* // Screen Size All mobile check */
 @media (max-width: 575px) {
+    body {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+    .logo img {
+        width: 110px;
+    }
+    nav ul {
+        margin: 0px 0 12px;
+        padding: 0;
+    }
+    nav ul li {
+        padding-top: 5px;
+    }
+    nav ul li a {
+        font-size: 4px;
+    }
+    .sec1.left-col h1{
+        font-size: 23px;
+    }
+    .sec1.rt-col{
+        margin-left: 26px;
+        margin-top: 30px;
+    }
+    .sec2 .left {
+        width: 100%;
+        padding-right: 90px;
+    }
+    .sec2 .left h1 {
+        font-size: 35px;
+        padding-bottom: 20px;
+    }
+    .sec2 .left h2 {
+        font-size: 13px;
+        padding-bottom: 0px;
+    }
+    .sec2 .left p{
+        font-size: 19px;
+    }
+    .sec2 .right p {
+        padding-top: 5px;
+        font-size: 9px;
+        padding-right: 5px;
+    }
+    button{
+        margin-top: -84px;
+    }
+    .sec4 .left p {
+        word-spacing: 3px;
+        line-height: 19px;
+        font-size: 14px;
+        padding-bottom: 10px;
+    }
+    .sec5 {
+        width: 100%;
+        line-height: 23px;
+        padding-top: 30px;
+    }
+    .sec5 h2 {
+        padding-bottom: 10px;
+        font-size: 25px;
+    }
+    .sec5 p {
+        padding-bottom: 5px;
+        word-spacing: 1px;
+    }
+    .sec6 img {
+        width: 17%;
+    }
+    .sec7 {
+        padding-bottom: 15px;
+    }
+    .sec8 {
+        padding-top: 25px;
+    }
+    .sec8 .left h2 {
+        font-size: 28px;
+    }
+    .sec8 .left p {
+        word-spacing: 2px;
+        line-height: 21px;
+        font-size: 15px;
+        text-align: justify;
+    }
+    .sec8 .right {
+        width: 70%;
+        padding-left: 88px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .sec9 {
+        padding-top: 30px;
+    }
+    .sec9 h2 {
+        font-size: 25px;
+    }
+    .sec9 p {
+        padding-top: 8px;
+        font-size: 14px;
+    }
+    .sec10 {
+        padding-left: 10px;
+        padding-top: 0px;
+    }
+    .sec10 h2 {
+        line-height: 91px;
+        padding-bottom: 0px;
+    }
+    .sec10 .items2 {
+        width: 100%;
+        margin-left: 20px;
+        margin-top: -214%;
+    }
+    .sec10 p {
+        padding-top: 24px;
+        line-height: 16px;
+        font-size: 15px;
+    }
+    .items3 img {
+        margin-top: 30px;
+        width: 300px;
+        height: 320px;
+        margin-left: 0px;
+    }
+   
+
 
 }
