--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 h1, h2, h3, h4, h5, h6 {
     margin: 0px;
 }
@@ -250,14 +249,23 @@ span{
 .sec10 span{
     display: block;
     font-weight: bold;
-    padding-top: 40px;
+    padding-top: 50px;
     padding-left: 20px;
 }
 .sec10 ul li{
     list-style: none;
     text-decoration: line-through;
-    padding-bottom: 12px;
+    padding-top: 28px;
 }
+.items3{
+    background-color: #bfc500;
+    width: 550px;
+    height: 330px;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+
 
 
 
@@ -630,7 +638,4 @@ span{
 
 }
 
-@media (max-width:576px) {
 
-    
-}
