--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ span{
     font-weight: bold;
     padding-top: 50px;
     padding-left: 20px;
+     text-decoration: none;
 }
 .sec10 ul li{
     list-style: none;
