--- a/style.css
+++ b/style.css
@@ -256,14 +256,18 @@ span{
 .sec10 ul li{
     list-style: none;
     text-decoration: line-through;
-    padding-top: 28px;
+    padding-top: 35px;
 }
 .items3{
     background-color: #bfc500;
-    width: 550px;
-    height: 330px;
+    width: 500px;
+    height: 400px;
     margin-top: 30px;
     margin-left: 30px;
+}
+.items3 img{
+    width: 100%;
+    height: 400px;
 }
 
 
@@ -638,4 +642,3 @@ span{
 
 
 }
-
