--- a/style.css
+++ b/style.css
@@ -210,6 +210,10 @@ span{
     width: 10%;
 }
 
+.sec7mobile {
+    display: none;
+}
+
 .sec8{
     display: flex;
     justify-content: space-between;
@@ -469,48 +473,77 @@ span{
         width: 100%;
         padding-top: 20px;
     }
+    .sec2{
+        display: block;
+    }
     .sec2 .left {
-        width: 70%;
+        width: 100%;
         padding-right: 0px;
+    }
+    .sec2 .left h1 {
+        font-size: 25px;
+        color: yellow;
+        padding-bottom: 15px;
+    }
+    .sec2 .left h2 {
+        font-size: 16px;
+        padding-bottom: 8px;
     }
     .sec2 .right {
-        width: 30%;
+        width: 100%;
     }
     .sec2 .right p {
-        padding-top: 70px;
-        padding-right: 0px;
-        font-size: 11px;
-        padding-left: 5px;
+        padding-top: 20px;
+        font-size: 14px;
     }
     .sec3 {
-        padding-left: 15px;
-        padding-right: 15px;
+        display: block;
+        height: 200px;
     }
     .sec3 h1 {
-        font-size: 15px;
+        font-size: 25px;
+        padding-top: 15px;
     }
-    .sec3 p {
-        font-size: 14px;
-        width: 75%;
-        padding-left: 10px;
+    .sec3 p{
+        font-size: 18px;
+        margin: 0px;
+        padding-top: 7px;
+        padding-bottom: 15px;
+    }
+    .sec3 p br{
+        display: none;
+       
+    }
+    .sec3 .btn{
+        text-align: center;
     }
     button {
         background-color: black;
         color: #bfc500;
         border-radius: 10px;
         border-style: none;
-        width: 137px;
-        height: 62px;
-        font-size: 12px;
+        width: 145px;
+        height: 72px;
+        font-size: 15px;
     }
     .sec4{
         display: block;
         padding: 0px;
     }
     .sec4 .left {
+        padding-top: 10px;
         width: 100%;
         padding-right: 0px;
     }
+    .sec4 .left h2{
+        font-size: 27px;
+    }
+    .sec4 .left p {
+        word-spacing: 4px;
+        line-height: 22px;
+        font-size: 17px;
+    }
+
     .sec4 .right {
         width: 100%;
         padding-top: 15px;
@@ -526,22 +559,37 @@ span{
     .sec5 p {
         padding-bottom: 30px;
     }
-    .sec6 img {
-        width: 10%;
-        display: inline-block;
+    .sec6{
+        display: none;
     }
     .sec7 {
-        display: flex;
-        justify-content: space-around;
-        font-size: 6px;
-        padding-left: 0px;
-        padding-bottom: 25px;
+        display: none;
     }
+    .sec7 hr{
+        display: none;
+    }
+    .sec7mobile {
+        display: block;
+        margin: auto;
+        text-align: center;
+    }
+    .sec7mobile img {
+        width: 50%;
+    }
+    .sec7mobile p{
+        font-size: 20px;
+    }
+    
     .sec8{
         display: block;
+        padding-top: 40px;
     }
+    
     .sec8 .left {
         width: 100%;
+    }
+    .sec8 .left h2 {
+        font-size: 32px;
     }
     .sec8 .right {
         width: 40%;
@@ -574,6 +622,9 @@ span{
     header{
         display: block;
     }
+    .logo{
+        text-align: center;
+    }
     .logo img {
         width: 60%;
     }
@@ -592,32 +643,37 @@ span{
         font-size: 22px;
     }
     .sec2 .left {
-        width: 60%;
+        width: 100%;
         padding-right: 12px;
     }
     .sec2 .right {
-        width: 40%;
+        width: 100%;
     }
     .sec3 {
+        height: auto;
         padding-left: 10px;
         padding-right: 10px;
     }
     .sec3 h1 {
-        font-size: 13px;
+        font-size: 18px;
     }
     .sec3 p {
-        font-size: 12px;
-        width: 69%;
-        padding-left: 10px;
+        font-size: 15px;
+        width: 100%;
     }
+    .sec3 .btn{
+        text-align: center;
+        padding-bottom: 10px;
+    }
+    
     button {
         background-color: black;
         color: #bfc500;
         border-radius: 10px;
         border-style: none;
-        width: 135px;
-        height: 48px;
-        font-size: 11px;
+        width: 130px;
+        height: 50px;
+        font-size: 14px;
     }
     .sec4 .left h2{
         padding-top: 5px;
@@ -641,9 +697,5 @@ span{
         padding-top: 68px;
         text-decoration: none;
     }
-
-    
-   
-
 
 }
